[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5" 

# Adding external crate "rand"
# The versioning is semantic in nature. It means that all versions 
# above 0.8.5 and below 0.9.0 are acceptable.
